# arithmetique

./: .test.c.swp  Makefile.am  README.md  README.src  configure.ac  math.bc  mathinbin.c  operation.c  patchs.sh  puissance.bc  test.1  test.bc
arithmetique/: Makefile.am  arithmetique.c  arithmetique.h
exemple/: Makefile  README.src  arithmetique.c  main-bin  main.c
exemple/arithmetique/: arithmetique.c  arithmetique.c.rej  arithmetique.h
exemple/arithmetique/arithmetique/: arithmetique.c
exemple/main/: main.c  main.c.orig  main.c.rej
exemple/operation/: operation.bak.02.c  operation.bak.c  operation.c  operation.h
exemple/patchs/: arithmetique.patch
main/: main.c
operation/: .operation.c.swp  operation.c  operation.h
patchs/: arithmetique.bak.c  arithmetique.c  arithmetique.c.bak  arithmetique.patch  main.c.bak  main.patch  operation.c  operation.c.bak  operation.patch
